--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.0.6",
+    "@next/font": "^13.1.6",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.0.6",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
-    "eslint-config-next": "^13.0.6",
+    "eslint-config-next": "^13.1.6",
     "postcss": "^8.4.19",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4"
